// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiHeaderTable renders 2x2 table correctly 1`] = `
<table class="govuk-table table">
  <thead>
    <tr>
      <td colspan="2"
          rowspan="2"
          class="borderBottom borderRight"
      >
      </td>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        A
      </th>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        B
      </th>
    </tr>
    <tr>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        C
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        D
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        C
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        D
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        1
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        3
      </th>
      <td class="govuk-table__cell--numeric">
        AC13
      </td>
      <td class="govuk-table__cell--numeric">
        AD13
      </td>
      <td class="govuk-table__cell--numeric">
        BC13
      </td>
      <td class="govuk-table__cell--numeric">
        BD13
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        4
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        AC14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        AD14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BC14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BD14
      </td>
    </tr>
    <tr>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        2
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        3
      </th>
      <td class="govuk-table__cell--numeric">
        AC23
      </td>
      <td class="govuk-table__cell--numeric">
        AD23
      </td>
      <td class="govuk-table__cell--numeric">
        BC23
      </td>
      <td class="govuk-table__cell--numeric">
        BC23
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        4
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        AC24
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        AD24
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BC23
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BC24
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MultiHeaderTable renders 2x2 with column group table correctly 1`] = `
<table class="govuk-table table">
  <thead>
    <tr>
      <td colspan="2"
          rowspan="2"
          class="borderBottom borderRight"
      >
      </td>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        A
      </th>
    </tr>
    <tr>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        C
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        D
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        1
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        3
      </th>
      <td class="govuk-table__cell--numeric">
        AC13
      </td>
      <td class="govuk-table__cell--numeric">
        AD13
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        4
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        AC14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        AD14
      </td>
    </tr>
    <tr>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        2
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        3
      </th>
      <td class="govuk-table__cell--numeric">
        AC23
      </td>
      <td class="govuk-table__cell--numeric">
        AD23
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        4
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        AC24
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        AD24
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MultiHeaderTable renders 2x2 with row group table correctly 1`] = `
<table class="govuk-table table">
  <thead>
    <tr>
      <td colspan="2"
          rowspan="2"
          class="borderBottom borderRight"
      >
      </td>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        A
      </th>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        B
      </th>
    </tr>
    <tr>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        C
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        D
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        C
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        D
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th class="borderBottom"
          rowspan="1"
          scope="rowgroup"
      >
        1
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
      </th>
      <td class="govuk-table__cell--numeric">
        AC13
      </td>
      <td class="govuk-table__cell--numeric">
        AD13
      </td>
      <td class="govuk-table__cell--numeric">
        BC13
      </td>
      <td class="govuk-table__cell--numeric">
        BD13
      </td>
    </tr>
    <tr>
      <th class="borderBottom"
          rowspan="1"
          scope="rowgroup"
      >
        2
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        4
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        AC14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        AD14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BC14
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BD14
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`MultiHeaderTable renders 2x2x2 table correctly 1`] = `
<table class="govuk-table table">
  <thead>
    <tr>
      <td colspan="3"
          rowspan="3"
          class="borderBottom borderRight"
      >
      </td>
      <th class="cellHorizontalMiddle"
          colspan="4"
          scope="colgroup"
      >
        A
      </th>
      <th class="cellHorizontalMiddle"
          colspan="4"
          scope="colgroup"
      >
        B
      </th>
    </tr>
    <tr>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        C
      </th>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        D
      </th>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        C
      </th>
      <th class="cellHorizontalMiddle"
          colspan="2"
          scope="colgroup"
      >
        D
      </th>
    </tr>
    <tr>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        E
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        F
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        E
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        F
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        E
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        F
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        E
      </th>
      <th class="govuk-table__header--numeric borderBottom"
          colspan="1"
          scope="col"
      >
        F
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th class="borderBottom"
          rowspan="4"
          scope="rowgroup"
      >
        1
      </th>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        3
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        5
      </th>
      <td class="govuk-table__cell--numeric">
        ACE135
      </td>
      <td class="govuk-table__cell--numeric">
        ACF135
      </td>
      <td class="govuk-table__cell--numeric">
        ADE135
      </td>
      <td class="govuk-table__cell--numeric">
        ADF135
      </td>
      <td class="govuk-table__cell--numeric">
        BCE135
      </td>
      <td class="govuk-table__cell--numeric">
        BCF135
      </td>
      <td class="govuk-table__cell--numeric">
        BDE135
      </td>
      <td class="govuk-table__cell--numeric">
        BDF135
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        6
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        ACE136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ACF136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADE136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADF136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCE136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCF136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDE136
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDF136
      </td>
    </tr>
    <tr>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        4
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        5
      </th>
      <td class="govuk-table__cell--numeric">
        ACE145
      </td>
      <td class="govuk-table__cell--numeric">
        ACF145
      </td>
      <td class="govuk-table__cell--numeric">
        ADE145
      </td>
      <td class="govuk-table__cell--numeric">
        ADF145
      </td>
      <td class="govuk-table__cell--numeric">
        BCE145
      </td>
      <td class="govuk-table__cell--numeric">
        BCF145
      </td>
      <td class="govuk-table__cell--numeric">
        BDE145
      </td>
      <td class="govuk-table__cell--numeric">
        BDF145
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        6
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        ACE146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ACF146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADE146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADF146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCE146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCF146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDE146
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDF146
      </td>
    </tr>
    <tr>
      <th class="borderBottom"
          rowspan="4"
          scope="rowgroup"
      >
        2
      </th>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        3
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        5
      </th>
      <td class="govuk-table__cell--numeric">
        ACE235
      </td>
      <td class="govuk-table__cell--numeric">
        ACF235
      </td>
      <td class="govuk-table__cell--numeric">
        ADE235
      </td>
      <td class="govuk-table__cell--numeric">
        ADF235
      </td>
      <td class="govuk-table__cell--numeric">
        BCE235
      </td>
      <td class="govuk-table__cell--numeric">
        BCF235
      </td>
      <td class="govuk-table__cell--numeric">
        BDE235
      </td>
      <td class="govuk-table__cell--numeric">
        BDF235
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        6
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        ACE236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ACF236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADE236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADF236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCE236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCF236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDE236
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDF236
      </td>
    </tr>
    <tr>
      <th class="borderBottom"
          rowspan="2"
          scope="rowgroup"
      >
        4
      </th>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        5
      </th>
      <td class="govuk-table__cell--numeric">
        ACE245
      </td>
      <td class="govuk-table__cell--numeric">
        ACF245
      </td>
      <td class="govuk-table__cell--numeric">
        ADE245
      </td>
      <td class="govuk-table__cell--numeric">
        ADF245
      </td>
      <td class="govuk-table__cell--numeric">
        BCE245
      </td>
      <td class="govuk-table__cell--numeric">
        BCF245
      </td>
      <td class="govuk-table__cell--numeric">
        BDE245
      </td>
      <td class="govuk-table__cell--numeric">
        BDF245
      </td>
    </tr>
    <tr>
      <th class="govuk-table__cell--numeric"
          rowspan="1"
          scope="row"
      >
        6
      </th>
      <td class="govuk-table__cell--numeric borderBottom">
        ACE246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ACF246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADE246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        ADF246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCE246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BCF246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDE246
      </td>
      <td class="govuk-table__cell--numeric borderBottom">
        BDF246
      </td>
    </tr>
  </tbody>
</table>
`;
